# libfw_env

./: Makefile.am  README.md  configure.ac
include/: Makefile.am
lib/: Makefile.am
patches/: 0001-Set-default-environment-variables-to-empty.patch  0002-Remove-unneed-header-includes.patch  0003-Define-CONFIG_FILE-etc-fw_env_config.patch  series
